[package]
name = "mcpbridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["rustls"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
rustls = "0.21"

[dev-dependencies]
sha2 = "0.10.8"
